# put_in_good_hands

./: .dockerignore  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.lock.txt  requirements.txt
put_in_good_hands_app/: admin.py  apps.py  context_processors.py  forms.py  models.py  validators.py  views.py
put_in_good_hands_app/migrations/: 0001_initial.py  0002_alter_institution_type.py  0003_auto_20210617_1623.py
put_in_good_hands_app/static/css/: style.css
put_in_good_hands_app/static/js/: app.js  my.js
put_in_good_hands_app/templates/: base.html  buttons-login-register.html  donation_list.html  form-confirmation.html  form.html  index.html  login.html  menu-list-border.html  menu-list.html  nav-header.html  pagination.html  profile-menu.html  profile_details.html  register.html  settings.html  slogan-confirmation.html  slogan-form.html  slogan.html
put_in_good_hands_project/: asgi.py  settings.py  settings_docker.py  urls.py  wsgi.py
